--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Example</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+<title>Spring Security Example</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-    	<div th:replace="fragments/header :: header"> </div>
-        <h1>Panel administracyjny</h1>
-		<a th:href="@{/admin/users}" class="btn btn-primary" role="button">Zarządzanie użytkownikami</a>
-        
-        <div th:replace="fragments/footer :: footer"> </div>
-    </body>
+</head>
+<body style="padding: 80px;">
+	<div th:replace="fragments/header :: header"></div>
+	<div class="col-md-6 col-md-offset-2">
+		<h1>Panel administracyjny</h1>
+		<a th:href="@{/admin/users}" class="btn btn-primary" role="button">Zarządzanie
+			użytkownikami</a>
+	</div>
+
+	<div th:replace="fragments/footer :: footer"></div>
+</body>
 </html>
