--- a/IO2017/src/main/resources/templates/edit_user.html
+++ b/IO2017/src/main/resources/templates/edit_user.html
@@ -5,63 +5,58 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Tworzenie nowego użytkownika</title>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="padding: 80px;">
 	<div th:replace="fragments/header :: header"></div>
-	<div id="container">
-		<div class="row">
-			<div class="span4 offset4">
-				<form action="#" th:action="@{/admin/users/editUser/submit}"
-					method="post" class="form-horizontal">
-					<div class="form-group">
-						<label for="login">Login:</label> <input type="text"
-							th:field="*{user.userName}"
-				class ="form-control" id="login"/>
-					</div>
-					<input type="hidden" th:field="*{user.userId}" />
-					<input type="hidden" th:field="*{user.password}" />
-					<div class="form-group">
-						<label for="new_pwd">Nowe hasło:</label> <input type="password"
-							th:field="*{user.password}"
-				class="form-control" id="new_pwd"/>
-					</div>
-					<span style="color: gray;"> (zostaw puste jak bez zmiany) </span>
-					<div class="form-group">
-						<label for="email">Adres email:</label> <input type="email"
-							th:field="*{user.email}" class="form-control" id="email"/>
-					</div>
-					<div class="form-group">
-						<label for="imie">Imię:</label> <input type="text"
-							th:field="*{user.name}"
-				class ="form-control" id="imie"/>
-					</div>
-					<div class="form-group">
-						<label for="nazwisko">Nazwisko:</label> <input type="text"
-							th:field="*{user.surname}" 
-				name="_enabled" th:value="${enabled}" class ="form-control" id="nazwisko"/>
-					</div>
-					<input type="hidden" name="_enabled" th:value="${enabled}" />
-					<div class="checkbox">
-						<label><input type="checkbox" id="enabled" name="enabled"
-							th:checked="${enabled}"/> Aktywny</label>
-					</div>
-					<input type="hidden" name="_roleAdmin" th:value="${roleAdmin}"/>
-					<div class="checkbox">
-						<label><input type="checkbox" id="roleAdmin"
-							name="roleAdmin" th:checked="${roleAdmin}"/> Admin</label>
-					</div>
-					<button type="submit" class="btn btn-default">Zatwierdź</button>
-					<button type="reset" class="btn btn-default">Resetuj</button>
-				</form>
+	<div class="col-md-4 col-md-offset-4">
+		<form action="#" th:action="@{/admin/users/editUser/submit}"
+			method="post" class="form-horizontal">
+			<div class="form-group">
+				<label for="login">Login:</label> <input type="text"
+					th:field="*{user.userName}" class="form-control" id="login" />
 			</div>
-		</div>
+			<input type="hidden" th:field="*{user.userId}" /> <input
+				type="hidden" th:field="*{user.password}" />
+			<div class="form-group">
+				<label for="new_pwd">Nowe hasło:</label> <input type="password"
+					th:field="*{user.password}" class="form-control" id="new_pwd" />
+			</div>
+			<span style="color: gray;"> (zostaw puste jak bez zmiany) </span>
+			<div class="form-group">
+				<label for="email">Adres email:</label> <input type="email"
+					th:field="*{user.email}" class="form-control" id="email" />
+			</div>
+			<div class="form-group">
+				<label for="imie">Imię:</label> <input type="text"
+					th:field="*{user.name}" class="form-control" id="imie" />
+			</div>
+			<div class="form-group">
+				<label for="nazwisko">Nazwisko:</label> <input type="text"
+					th:field="*{user.surname}" name="_enabled" th:value="${enabled}"
+					class="form-control" id="nazwisko" />
+			</div>
+			<input type="hidden" name="_enabled" th:value="${enabled}" />
+			<div class="checkbox">
+				<label><input type="checkbox" id="enabled" name="enabled"
+					th:checked="${enabled}" /> Aktywny</label>
+			</div>
+			<input type="hidden" name="_roleAdmin" th:value="${roleAdmin}" />
+			<div class="checkbox">
+				<label><input type="checkbox" id="roleAdmin"
+					name="roleAdmin" th:checked="${roleAdmin}" /> Admin</label>
+			</div>
+			<button type="submit" class="btn btn-default">Zatwierdź</button>
+			<button type="reset" class="btn btn-default">Resetuj</button>
+		</form>
+	</div>
+	</div>
 	</div>
 
 	<div th:replace="fragments/footer :: footer"></div>
