drobne poprawki szablonów

--- a/IO2017/src/main/resources/templates/register_new.html
+++ b/IO2017/src/main/resources/templates/register_new.html
@@ -13,54 +13,51 @@
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="padding: 50px;">
+<body style="padding: 80px;">
 	<div th:replace="fragments/header :: header"></div>
-	<div class="container">
-		<div class="row">
-			<div class="span4">
+	<div class="col-md-4 col-md-offset-4">
 				<h1>Rejestracja</h1>
-				<form action="#" th:action="@{/register/new/submit}"
-					th:object="${userDto}" method="post" class="form-horizontal">
-					<div class="form-group">
-						<label for="login">Login:</label> <input type="text"
-							th:field="*{username}" class="form-control" id="login" />
-						<p th:each="error: ${#fields.errors('username')}"
-							th:text="${error}">Validation error</p>
-					</div>
-					<div class="form-group">
-						<label for="login">Imię:</label> <input type="text"
-							th:field="*{name}" class="form-control" id="imie" />
-						<p th:each="error: ${#fields.errors('name')}" th:text="${error}">Validation
-							error</p>
-					</div>
-					<div class="form-group">
-						<label for="login">Nazwisko:</label> <input type="text"
-							th:field="*{surname}" class="form-control" id="nazwisko" />
-						<p th:each="error: ${#fields.errors('surname')}"
-							th:text="${error}">Validation error</p>
-					</div>
-					<div class="form-group">
-						<label for="email">Adres email:</label> <input type="email"
-							th:field="*{email}" class="form-control" id="email" />
-						<p th:each="error: ${#fields.errors('email')}" th:text="${error}">Validation
-							error</p>
-					</div>
-					<div class="form-group">
-						<label for="pwd">Hasło:</label> <input type="password"
-							th:field="*{password}" class="form-control" id="pwd" />
-						<p th:each="error: ${#fields.errors('password')}"
-							th:text="${error}">Validation error</p>
-					</div>
-					<div class="form-group">
-						<label for="pwd">Potwierdź hasło:</label> <input type="password"
-							th:field="*{matchingPassword}" class="form-control" id="pwd2" />
-						<p th:each="error: ${#fields.errors('matchingPassword')}"
-							th:text="${error}">Validation error</p>
-					</div>
-					<button type="submit" class="btn btn-default">Zatwierdź</button>
-				</form>
-			</div>
+				<form action="
+		#" th:action="@{/register/new/submit}" th:object="${userDto}"
+		method="post" class="form-horizontal">
+		<div class="form-group">
+			<label for="login">Login:</label> <input type="text"
+				th:field="*{username}" class="form-control" id="login" />
+			<p th:each="error: ${#fields.errors('username')}" th:text="${error}">Validation
+				error</p>
 		</div>
+		<div class="form-group">
+			<label for="login">Imię:</label> <input type="text"
+				th:field="*{name}" class="form-control" id="imie" />
+			<p th:each="error: ${#fields.errors('name')}" th:text="${error}">Validation
+				error</p>
+		</div>
+		<div class="form-group">
+			<label for="login">Nazwisko:</label> <input type="text"
+				th:field="*{surname}" class="form-control" id="nazwisko" />
+			<p th:each="error: ${#fields.errors('surname')}" th:text="${error}">Validation
+				error</p>
+		</div>
+		<div class="form-group">
+			<label for="email">Adres email:</label> <input type="email"
+				th:field="*{email}" class="form-control" id="email" />
+			<p th:each="error: ${#fields.errors('email')}" th:text="${error}">Validation
+				error</p>
+		</div>
+		<div class="form-group">
+			<label for="pwd">Hasło:</label> <input type="password"
+				th:field="*{password}" class="form-control" id="pwd" />
+			<p th:each="error: ${#fields.errors('password')}" th:text="${error}">Validation
+				error</p>
+		</div>
+		<div class="form-group">
+			<label for="pwd">Potwierdź hasło:</label> <input type="password"
+				th:field="*{matchingPassword}" class="form-control" id="pwd2" />
+			<p th:each="error: ${#fields.errors('matchingPassword')}"
+				th:text="${error}">Validation error</p>
+		</div>
+		<button type="submit" class="btn btn-default">Zatwierdź</button>
+		</form>
 	</div>
 	<!-- <div class="container">
 		<div class="row">
