drobne poprawki szablonów2

--- a/IO2017/src/main/resources/templates/register_new.html
+++ b/IO2017/src/main/resources/templates/register_new.html
@@ -17,8 +17,7 @@
 	<div th:replace="fragments/header :: header"></div>
 	<div class="col-md-4 col-md-offset-4">
 				<h1>Rejestracja</h1>
-				<form action="
-		#" th:action="@{/register/new/submit}" th:object="${userDto}"
+				<form action="#" th:action="@{/register/new/submit}" th:object="${userDto}"
 		method="post" class="form-horizontal">
 		<div class="form-group">
 			<label for="login">Login:</label> <input type="text"
