Dodane zadanie Mateusza z aktywacją użytkowników , przykładowy link: http://localhost:8080/confirmRegistration?code=4_d5843de315377304fa46815a0932e172af9c4fa3
poprawki

--- a/IO2017/src/main/resources/templates/fragments/header.html
+++ b/IO2017/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,11 @@
 				sec:authorize="isAuthenticated()">
 				<li sec:authorize="hasRole('ROLE_ADMIN')"><a
 					th:href="@{/admin}">Panel administracyjny</a></li>
-				<li><p class="navbar-text">Imię i nazwisko</p></li>
+				<li>
+					<p class="navbar-text">
+						<span sec:authentication="name"></span>
+					</p>
+				</li>
 				<li>
 					<form th:action="@{/logout}" method="post">
 						<button type="submit" class="btn btn-default navbar-btn">Wyloguj</button>
