Dodany obiekt kategorie i zarządzanie nim przez CMS'a.
Walidacja działa dobrze dla tworzenia nowych kategorii, w przypadku
edytowania trzeba jeszcze uwzględnić przypadek gdy będzie nazwa będzie
pusta.

--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -18,6 +18,9 @@
 		<h1>Panel administracyjny</h1>
 		<a th:href="@{/admin/users}" class="btn btn-primary" role="button">Zarządzanie
 			użytkownikami</a>
+			
+		<a th:href="@{/admin/categories}" class="btn btn-primary" role="button">Zarządzanie
+			kategoriami</a>
 	</div>
 
 	<div th:replace="fragments/footer :: footer"></div>
