--- a/IO2017/src/main/resources/templates/edit_category.html
+++ b/IO2017/src/main/resources/templates/edit_category.html
@@ -1,13 +1,13 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Spring Security Example</title>
+<title>Edycja kategorii</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<!-- <link type="text/css" rel="stylesheet" href="resources/css/basic.css" />  -->
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
@@ -16,17 +16,22 @@
 <body style="padding: 80px;">
 	<div th:replace="fragments/header :: header"></div>
 	<div class="col-md-4 col-md-offset-4">
-	<h1>Witaj na stronie do nauki fiszek!</h1>
-	<p sec:authorize="isAuthenticated()">
-		<p class="navbar-text">
-			Jesteś zalogowany jako: <b sec:authentication="name"></b>
-		</p>
-		
-	</p>
-	<p sec:authorize="!isAuthenticated()">
-		<a th:href="@{/login}">Tutaj można się zalogować</a>
-	</p>
+		<form action="#" th:action="@{/admin/categories/editCategory/submit}" th:object="${category}"
+			method="post" class="form-horizontal">
+			<div class="form-group">
+				<label for="name">Nazwa:</label> <input type="text"
+					th:field="*{name}" class="form-control" id="name" />
+			</div>
+			<input type="hidden" th:field="*{id}" />
+			<p th:each="error: ${#fields.errors()}"
+          			th:text="${error}">Validation error</p> <!-- TODO błędy walidacji na czerwono -->
+			<button type="submit" class="btn btn-default">Zatwierdź</button>
+		</form>
+			<a role="button" class="btn btn-info" th:href="@{/admin/categories}">Cofnij</a>
 	</div>
+
+
+
 	<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
