--- a/IO2017/src/main/resources/templates/admin_users.html
+++ b/IO2017/src/main/resources/templates/admin_users.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Spring Security Example</title>
+<title>Zarządzanie użytkownikami</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
@@ -42,8 +42,8 @@
 				<td th:text="${user.email}"></td>
 				<td th:if="${user.enabled}"><p>Aktywny</p></td>
 				<td th:unless="${user.enabled}">Nieaktywny</td>
-				<td><a th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a></td>
-				<td><a th:href="@{/admin/users/deleteUser(id=${user.userId})}">Usuń</a></td>
+				<td><a role="button" class="btn btn-warning"  th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a></td>
+				<td><a role="button" class="btn btn-danger" th:href="@{/admin/users/deleteUser(id=${user.userId})}">Usuń</a></td>
 			</tr>
 		</table>
 
@@ -68,15 +68,15 @@
 				<td th:text="${user.email}"></td>
 				<td th:if="${user.enabled}"><p>Aktywny</p></td>
 				<td th:unless="${user.enabled}">Nieaktywny</td>
-				<td><a th:if="${myId} != ${user.userId}"
-					th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a> <!--  dla aktualnie zalogowanego admina -->
-					<a th:if="${myId} == ${user.userId}"
-					th:href="@{/admin/users/editUser(id=${user.userId})}">To Ty</a></td>
-				<td><a th:if="${myId} != ${user.userId}"
+				<td><a role="button" class="btn btn-warning"
+					th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a>
+				</td>
+				<td><a role="button" class="btn btn-danger"  th:if="${myId} != ${user.userId}"
 					th:href="@{/admin/users/deleteUser(id=${user.userId})}">Usuń</a> <!--  dla aktualnie zalogowanego admina -->
-					<span th:if="${myId} == ${user.userId}"
-					th:href="@{/admin/users/deleteUser(id=${user.userId})}">To
-						Ty</span></td>
+					<span th:if="${myId} == ${user.userId}" role="button" class="btn btn-default"
+					th:href="@{/admin/users/deleteUser(id=${user.userId})}">To Ty
+					</span>
+				</td>
 
 			</tr>
 		</table>
