--- a/IO2017/src/main/resources/templates/edit_user.html
+++ b/IO2017/src/main/resources/templates/edit_user.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Tworzenie nowego użytkownika</title>
+<title>Edycja użytkownika</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
