--- a/IO2017/src/main/resources/templates/fragments/header.html
+++ b/IO2017/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">WebSiteName</a>
+				<a class="navbar-brand" th:href="@{/home}">IO2017</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right"
 				sec:authorize="!isAuthenticated()">
