--- a/IO2017/src/main/resources/templates/login.html
+++ b/IO2017/src/main/resources/templates/login.html
@@ -4,20 +4,14 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Strona logowania - IO2017</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<thymeleaf th:replace="fragments/head :: head" />
 </head>
-<body style="padding: 80px;">
+<body>
 	<div th:replace="fragments/header :: header"></div>
 
-	<div class="col-md-2 col-md-offset-5">
-		<div th:if="${param.error}">Błędny login lub hasło, lub
+	<div class="col-md-4 col-md-offset-4 alert alert-danger" th:if="${param.error}">Błędny login lub hasło, lub
 			użytkownik bez aktywacji.</div>
+	<div class="col-md-2 col-md-offset-5">
 		<div th:if="${param.logout}">Zostałeś wylogowany.</div>
 		<form th:action="@{/login}" method="post" class="form-horizontal">
 			<div class="form-group">
