--- a/IO2017/src/main/resources/templates/create_category.html
+++ b/IO2017/src/main/resources/templates/create_category.html
@@ -4,16 +4,9 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Tworzenie nowej kategorii</title>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<thymeleaf th:replace="fragments/head :: head" />
 </head>
-<body style="padding: 80px;">
+<body>
 	<div th:replace="fragments/header :: header"></div>
 	<div class="col-md-4 col-md-offset-4">
 		<form th:action="@{/admin/categories/newCategory/submit}" th:object="${category}"
@@ -24,6 +17,7 @@
 			</div>
 						<button type="submit" class="btn btn-default">Zatwierdź</button>
 			<button type="reset" class="btn btn-default">Resetuj</button>
+			
 		<p th:each="error: ${#fields.errors()}"
           th:text="${error}">Validation error</p> <!-- TODO błędy walidacji na czerwono -->
 		</form>
