--- a/IO2017/src/main/resources/templates/admin_categories.html
+++ b/IO2017/src/main/resources/templates/admin_categories.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-8 col-md-offset-2">
+	
 		<a th:href="@{/admin}" class="btn btn-primary" role="button">Panel
 			administracyjny</a>
 		<a th:href="@{/admin/categories/newCategory}"
@@ -33,7 +35,8 @@
 		</table>
 
 	</div>
+	
 	<div th:replace="fragments/footer :: footer"></div>
-
+	</main>
 </body>
 </html>
