--- a/IO2017/src/main/resources/templates/create_category.html
+++ b/IO2017/src/main/resources/templates/create_category.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-4 col-md-offset-4">
 		<form th:action="@{/admin/categories/newCategory/submit}" th:object="${category}"
 			method="post" class="form-horizontal">
@@ -23,7 +24,7 @@
 		</form>
 		<a role="button" class="btn btn-info" th:href="@{/admin/categories}">Cofnij</a>
 	</div>
-
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 </html>
