--- a/IO2017/src/main/resources/templates/fragments/footer.html
+++ b/IO2017/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,11 @@
 <div th:fragment="footer">
-	<nav class="navbar navbar-fixed-bottom navbar-inverse">
-		<div class="navbar-header">
-			<p class="navbar-text">
-				Strona stworzona w ramach przedmiotu Inżynieria Oprogramowania <br />
-				Copyright © 2017 <em>MG, DO, WO, MP</em>
-			</p>
-		</div>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Skontaktuj się z nami</a></li>
+	<nav class="nav navbar-inverse navbar-bottom ">
+	<div class="container-fluid">
+	<p class="navbar-text">Strona stworzona w ramach przedmiotu Inżynieria Oprogramowania </p>
+	<p class="navbar-text">Copyright © 2017 <em>MG, DO, WO, MP</em></p>
+	<ul class="nav navbar-nav navbar-right">
+		<li><a href="#">Skontaktuj się z nami</a></li>
 		</ul>
+		</div>
 	</nav>
 </div>
