--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-6 col-md-offset-2">
 		<h1>Panel administracyjny</h1>
 		<a th:href="@{/admin/users}" class="btn btn-primary" role="button">Zarządzanie
@@ -16,7 +17,7 @@
 		<a th:href="@{/admin/categories}" class="btn btn-primary" role="button">Zarządzanie
 			kategoriami</a>
 	</div>
-
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 </html>
