--- a/IO2017/src/main/resources/templates/confirm_registration.html
+++ b/IO2017/src/main/resources/templates/confirm_registration.html
@@ -8,11 +8,13 @@
 </head>
    <body >
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-4 col-md-offset-4">
 	<p th:text="${message}"> </p>
 	<a th:href="@{/home}">Przejdź do strony głównej</a>
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 
 </html>
