--- a/IO2017/src/main/resources/templates/create_user.html
+++ b/IO2017/src/main/resources/templates/create_user.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-4 col-md-offset-4">
 		<form action="#" th:action="@{/admin/users/newUser/submit}"
 			method="post" class="form-horizontal">
@@ -44,7 +45,7 @@
 			<button type="reset" class="btn btn-default">Resetuj</button>
 		</form>
 	</div>
-
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 </html>
