--- a/IO2017/src/main/resources/templates/edit_user.html
+++ b/IO2017/src/main/resources/templates/edit_user.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-4 col-md-offset-4">
 		<form action="#" th:action="@{/admin/users/editUser/submit}"
 			method="post" class="form-horizontal">
@@ -50,9 +51,7 @@
 			<button type="reset" class="btn btn-default">Resetuj</button>
 		</form>
 	</div>
-
-
-
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 </html>
