--- a/IO2017/src/main/resources/templates/login.html
+++ b/IO2017/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
-
+	<main class="wrapper">
 	<div class="col-md-4 col-md-offset-4 alert alert-danger" th:if="${param.error}">Błędny login lub hasło, lub
 			użytkownik bez aktywacji.</div>
 	<div class="col-md-2 col-md-offset-5">
@@ -30,5 +30,6 @@
 		</form>
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 </html>
