--- a/IO2017/src/main/resources/templates/register_new.html
+++ b/IO2017/src/main/resources/templates/register_new.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
+	<main class="wrapper">
 	<div class="col-md-4 col-md-offset-4">
 		<h1>Rejestracja</h1>
 		<form action="#" th:action="@{/register/new/submit}"
@@ -55,5 +56,6 @@
 		</form>
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
+	</main>
 </body>
 </html>
