dodane wyświetlanie kategorii

--- a/IO2017/src/main/resources/templates/home.html
+++ b/IO2017/src/main/resources/templates/home.html
@@ -15,7 +15,9 @@
 		<p class="navbar-text">
 			Jesteś zalogowany jako: <b sec:authentication="name"></b>
 		</p>
-		
+		<p>
+			<a th:href="@{/categories}">Przejrzyj kategorie</a>
+		</p>
 	</p>
 	<p sec:authorize="!isAuthenticated()">
 		<a th:href="@{/login}">Tutaj można się zalogować</a>
