--- a/IO2017/src/main/resources/templates/confirm_registration.html
+++ b/IO2017/src/main/resources/templates/confirm_registration.html
@@ -7,9 +7,10 @@
 <thymeleaf th:replace="fragments/head :: head" />
 </head>
    <body >
+	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
-	<main class="wrapper">
-	<div class="col-md-4 col-md-offset-4">
+	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	<div class="col-md-4 col-md-offset-5">
 	<p th:text="${message}"> </p>
 	<a th:href="@{/home}">Przejdź do strony głównej</a>
 	</div>
