--- a/IO2017/src/main/resources/templates/edit_category.html
+++ b/IO2017/src/main/resources/templates/edit_category.html
@@ -8,9 +8,10 @@
 <thymeleaf th:replace="fragments/head :: head" />
 </head>
 <body>
+	<main class='wrapper'>
 	<div th:replace="fragments/header :: header"></div>
-	<main clas= wrapper>
-	<div class="col-md-4 col-md-offset-4">
+	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	<div class="col-md-4 col-md-offset-5">
 		<form action="#" th:action="@{/admin/categories/editCategory/submit}" th:object="${category}"
 			method="post" class="form-horizontal">
 			<div class="form-group">
