--- a/IO2017/src/main/resources/templates/home.html
+++ b/IO2017/src/main/resources/templates/home.html
@@ -9,7 +9,8 @@
 <body>
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
-	<div class="col-md-4 col-md-offset-4">
+	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	<div class="col-md-4 col-md-offset-5">
 	<h1>Witaj na stronie do nauki fiszek!</h1>
 	<p sec:authorize="isAuthenticated()">
 		<p class="navbar-text">
