--- a/IO2017/src/main/resources/templates/register_new.html
+++ b/IO2017/src/main/resources/templates/register_new.html
@@ -7,9 +7,10 @@
 <thymeleaf th:replace="fragments/head :: head" />
 </head>
 <body>
+<main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
-	<main class="wrapper">
-	<div class="col-md-4 col-md-offset-4">
+	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	<div class="col-md-4 col-md-offset-5">
 		<h1>Rejestracja</h1>
 		<form action="#" th:action="@{/register/new/submit}"
 			th:object="${userDto}" method="post" class="form-horizontal">
