--- a/IO2017/src/main/resources/static/css/basic.css
+++ b/IO2017/src/main/resources/static/css/basic.css
@@ -31,7 +31,14 @@ padding: 5px;
 	height: calc(100% - 52px);
 	padding-right: 0;
 	z-index: 0;
+	font-size: 15px;
+	font-weight: bold;
 }
 
-.sidebar-nav{
+.sidebar-nav>li>a{
+	/* color: #111111; */
+}
+
+.sidebar-nav>li>a:hover{
+	color: #444444;
 }
