--- a/IO2017/src/main/resources/templates/categories.html
+++ b/IO2017/src/main/resources/templates/categories.html
@@ -9,7 +9,8 @@
 <body>
 <main class="wrapper">
 	<div th:replace="fragments/header :: header"></div>
-	<div class="col-md-8 col-md-offset-2">
+	<nav th:replace="fragments/sidebar :: sidebar"></nav>
+	<div class="col-md-8 col-md-offset-3">
 		<h1>Kategorie:</h1>
 		<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 			<div class="panel panel-default" th:each="category : ${categories}">
