--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -17,6 +17,9 @@
 			
 		<a th:href="@{/admin/categories}" class="btn btn-primary" role="button">Zarządzanie
 			kategoriami</a>
+			
+		<a th:href="@{/admin/dictionaries}" class="btn btn-primary" role="button">Zarządzanie
+			słownikami</a>
 	</div>
 	<div th:replace="fragments/footer :: footer"></div>
 	</main>
